feat: create works endpoint
