# apps/functions/internal/works/model.go
@@ -1,0 +1,13 @@
+package works
+
+import "time"
+
+type Work struct {
+	ID           string    `json:"id"`
+	Title        string    `json:"title"`
+	Slug         string    `json:"slug"`
+	Content      string    `json:"content"`
+	ThumbnailURL *string   `json:"thumbnail_url"`
+	CreatedAt    time.Time `json:"created_at"`
+	UpdatedAt    time.Time `json:"updated_at"`
+}
